fix password field type

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -23,7 +23,7 @@ Login Here
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="{{ field.html_name }}">
                     {{ field.label }}
                 </label>
-                <input id="{{ field.id_for_label }}" name="{{ field.html_name }}" type="text" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" />
+                <input id="{{ field.id_for_label }}" name="{{ field.html_name }}" type="{{ field.field.widget.input_type }}" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" />
                 <p class="text-red-500 text-xs italic">{{ field.errors }}</p>
             </div>
         {% endfor %}
