--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block title %}
-Login Here
+Login
 {% endblock %}
 
 
@@ -9,6 +9,12 @@ Login Here
 <div class="w-full max-w-xs mx-auto mt-20">
     <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="post">
         {% csrf_token %}
+
+        {% if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+                <p class="text-red-500 text-xs italic">{{ error }}</p>
+            {% endfor %}
+        {% endif %}
 
         {% for hidden in form.hidden_fields %}
         {{ hidden }}
