--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,7 +4,7 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background: blue">
 {% block body %}
 {% endblock %}
 </body>
