Fix serving of static files and css

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -3,7 +3,7 @@
     <title>{% block title %}Messenger Analytics{% endblock %}</title>
     {% load static %}
 
-    <link href="{% static "tailwind-output.css" %}" rel="stylesheet">
+    <link href="{% static "tailwind-output.css" %}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
