Created dasboard ui added dataset list to dasboard created dataset upload ui implemented saving of uploaded datasets created dataset deletion ui

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,9 +4,10 @@
     {% load static %}
 
     <link href="{% static "tailwind-output.css" %}" rel="stylesheet" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bg-gray-100">
 {% block body %}
 {% endblock %}
 </body>
